# schema

./: pyproject.toml  readme.md  schema.py
schema/: schema.py
