[tool.poetry]
name = "schema"
version = "0.1.0"
description = "Get source code of tables in databases"
authors = ["Benjamin Du <longendu@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
loguru = ">=0.5.3"
pandas = ">=1.1.4"

[tool.poetry.dev-dependencies]
pyspark = ">=3.0.1"
pylint = "^2.6.0"
pytype = "^2020.11.12"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
